exports[`no-duplicate-hooks > invalid(1): import {describe, before} from 'node:test';\nconst d1 = () => { before(() => {}); before(() => {}); };\ndescribe('a', d1); 1`] = `

  1 | import {describe, before} from 'node:test';
  2 | const d1 = () => { before(() => {}); before(() => {}); };
  3 | describe('a', d1);

`;

exports[`no-duplicate-hooks > invalid(1): import {describe, before} from 'node:test';\nconst d1 = () => { before(() => {}); before(() => {}); };\ndescribe('a', d1); 2`] = `

Message:
  1 | import {describe, before} from 'node:test';
> 2 | const d1 = () => { before(() => {}); before(() => {}); };
    |                                      ^^^^^^^^^^^^^^^^ Duplicate \`before\` hook in the same scope.
  3 | describe('a', d1);

`;

exports[`no-duplicate-hooks > invalid(10): import * as nodeTest from 'node:test';\nnodeTest.before(() => {});\nnodeTest.before(() => {}); 1`] = `

  1 | import * as nodeTest from 'node:test';
  2 | nodeTest.before(() => {});
  3 | nodeTest.before(() => {});

`;

exports[`no-duplicate-hooks > invalid(10): import * as nodeTest from 'node:test';\nnodeTest.before(() => {});\nnodeTest.before(() => {}); 2`] = `

Message:
  1 | import * as nodeTest from 'node:test';
  2 | nodeTest.before(() => {});
> 3 | nodeTest.before(() => {});
    | ^^^^^^^^^^^^^^^^^^^^^^^^^ Duplicate \`before\` hook in the same scope.

`;

exports[`no-duplicate-hooks > invalid(11): import {before as setup} from 'node:test';\nsetup(() => {});\nsetup(() => {}); 1`] = `

  1 | import {before as setup} from 'node:test';
  2 | setup(() => {});
  3 | setup(() => {});

`;

exports[`no-duplicate-hooks > invalid(11): import {before as setup} from 'node:test';\nsetup(() => {});\nsetup(() => {}); 2`] = `

Message:
  1 | import {before as setup} from 'node:test';
  2 | setup(() => {});
> 3 | setup(() => {});
    | ^^^^^^^^^^^^^^^ Duplicate \`before\` hook in the same scope.

`;

exports[`no-duplicate-hooks > invalid(12): import {describe, before, after, beforeEach, afterEach} from 'node:test';\nbefore((): void => {});\nbefore((): void => {}); 1`] = `

  1 | import {describe, before, after, beforeEach, afterEach} from 'node:test';
  2 | before((): void => {});
  3 | before((): void => {});

`;

exports[`no-duplicate-hooks > invalid(12): import {describe, before, after, beforeEach, afterEach} from 'node:test';\nbefore((): void => {});\nbefore((): void => {}); 2`] = `

Message:
  1 | import {describe, before, after, beforeEach, afterEach} from 'node:test';
  2 | before((): void => {});
> 3 | before((): void => {});
    | ^^^^^^^^^^^^^^^^^^^^^^ Duplicate \`before\` hook in the same scope.

`;

exports[`no-duplicate-hooks > invalid(13): import {test} from 'node:test';\ntest('p', t => { t.beforeEach(() => {}); t.beforeEach(() => {}); }); 1`] = `

  1 | import {test} from 'node:test';
  2 | test('p', t => { t.beforeEach(() => {}); t.beforeEach(() => {}); });

`;

exports[`no-duplicate-hooks > invalid(13): import {test} from 'node:test';\ntest('p', t => { t.beforeEach(() => {}); t.beforeEach(() => {}); }); 2`] = `

Message:
  1 | import {test} from 'node:test';
> 2 | test('p', t => { t.beforeEach(() => {}); t.beforeEach(() => {}); });
    |                                          ^^^^^^^^^^^^^^^^^^^^^^ Duplicate \`beforeEach\` hook in the same scope.

`;

exports[`no-duplicate-hooks > invalid(14): import {test, beforeEach} from 'node:test';\ntest('p', async t => { t.test('a', () => { beforeEach(() => {}); beforeEach(() => {}); }); }); 1`] = `

  1 | import {test, beforeEach} from 'node:test';
  2 | test('p', async t => { t.test('a', () => { beforeEach(() => {}); beforeEach(() => {}); }); });

`;

exports[`no-duplicate-hooks > invalid(14): import {test, beforeEach} from 'node:test';\ntest('p', async t => { t.test('a', () => { beforeEach(() => {}); beforeEach(() => {}); }); }); 2`] = `

Message:
  1 | import {test, beforeEach} from 'node:test';
> 2 | test('p', async t => { t.test('a', () => { beforeEach(() => {}); beforeEach(() => {}); }); });
    |                                                                  ^^^^^^^^^^^^^^^^^^^^ Duplicate \`beforeEach\` hook in the same scope.

`;

exports[`no-duplicate-hooks > invalid(15): import {test, getTestContext} from 'node:test';\ntest('p', async t => { await t.test('a', () => { getTestContext().beforeEach(() => {}); getTestContext().beforeEach(() => {}); }); }); 1`] = `

  1 | import {test, getTestContext} from 'node:test';
  2 | test('p', async t => { await t.test('a', () => { getTestContext().beforeEach(() => {}); getTestContext().beforeEach(() => {}); }); });

`;

exports[`no-duplicate-hooks > invalid(15): import {test, getTestContext} from 'node:test';\ntest('p', async t => { await t.test('a', () => { getTestContext().beforeEach(() => {}); getTestContext().beforeEach(() => {}); }); }); 2`] = `

Message:
  1 | import {test, getTestContext} from 'node:test';
> 2 | test('p', async t => { await t.test('a', () => { getTestContext().beforeEach(() => {}); getTestContext().beforeEach(() => {}); }); });
    |                                                                                         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Duplicate \`beforeEach\` hook in the same scope.

`;

exports[`no-duplicate-hooks > invalid(16): import {test, beforeEach} from 'node:test';\ntest('p', t => { beforeEach(() => {}); t.beforeEach(() => {}); }); 1`] = `

  1 | import {test, beforeEach} from 'node:test';
  2 | test('p', t => { beforeEach(() => {}); t.beforeEach(() => {}); });

`;

exports[`no-duplicate-hooks > invalid(16): import {test, beforeEach} from 'node:test';\ntest('p', t => { beforeEach(() => {}); t.beforeEach(() => {}); }); 2`] = `

Message:
  1 | import {test, beforeEach} from 'node:test';
> 2 | test('p', t => { beforeEach(() => {}); t.beforeEach(() => {}); });
    |                                        ^^^^^^^^^^^^^^^^^^^^^^ Duplicate \`beforeEach\` hook in the same scope.

`;

exports[`no-duplicate-hooks > invalid(17): import {test, afterEach} from 'node:test';\ntest('p', t => { afterEach(() => {}); t.afterEach(() => {}); }); 1`] = `

  1 | import {test, afterEach} from 'node:test';
  2 | test('p', t => { afterEach(() => {}); t.afterEach(() => {}); });

`;

exports[`no-duplicate-hooks > invalid(17): import {test, afterEach} from 'node:test';\ntest('p', t => { afterEach(() => {}); t.afterEach(() => {}); }); 2`] = `

Message:
  1 | import {test, afterEach} from 'node:test';
> 2 | test('p', t => { afterEach(() => {}); t.afterEach(() => {}); });
    |                                       ^^^^^^^^^^^^^^^^^^^^^ Duplicate \`afterEach\` hook in the same scope.

`;

exports[`no-duplicate-hooks > invalid(18): import {test, before} from 'node:test';\ntest('p', async t => { await t.test('a'); before(() => {}); before(() => {}); }); 1`] = `

  1 | import {test, before} from 'node:test';
  2 | test('p', async t => { await t.test('a'); before(() => {}); before(() => {}); });

`;

exports[`no-duplicate-hooks > invalid(18): import {test, before} from 'node:test';\ntest('p', async t => { await t.test('a'); before(() => {}); before(() => {}); }); 2`] = `

Message:
  1 | import {test, before} from 'node:test';
> 2 | test('p', async t => { await t.test('a'); before(() => {}); before(() => {}); });
    |                                                             ^^^^^^^^^^^^^^^^ Duplicate \`before\` hook in the same scope.

`;

exports[`no-duplicate-hooks > invalid(2): import {describe, before} from 'node:test';\nfunction d1() { before(() => {}); before(() => {}); }\ndescribe('a', d1); 1`] = `

  1 | import {describe, before} from 'node:test';
  2 | function d1() { before(() => {}); before(() => {}); }
  3 | describe('a', d1);

`;

exports[`no-duplicate-hooks > invalid(2): import {describe, before} from 'node:test';\nfunction d1() { before(() => {}); before(() => {}); }\ndescribe('a', d1); 2`] = `

Message:
  1 | import {describe, before} from 'node:test';
> 2 | function d1() { before(() => {}); before(() => {}); }
    |                                   ^^^^^^^^^^^^^^^^ Duplicate \`before\` hook in the same scope.
  3 | describe('a', d1);

`;

exports[`no-duplicate-hooks > invalid(3): import {describe, before, after, beforeEach, afterEach} from 'node:test';\nbefore(() => {});\nbefore(() => {}); 1`] = `

  1 | import {describe, before, after, beforeEach, afterEach} from 'node:test';
  2 | before(() => {});
  3 | before(() => {});

`;

exports[`no-duplicate-hooks > invalid(3): import {describe, before, after, beforeEach, afterEach} from 'node:test';\nbefore(() => {});\nbefore(() => {}); 2`] = `

Message:
  1 | import {describe, before, after, beforeEach, afterEach} from 'node:test';
  2 | before(() => {});
> 3 | before(() => {});
    | ^^^^^^^^^^^^^^^^ Duplicate \`before\` hook in the same scope.

`;

exports[`no-duplicate-hooks > invalid(4): import {describe, before, after, beforeEach, afterEach} from 'node:test';\nbeforeEach(() => {});\nbeforeEach(() => {}); 1`] = `

  1 | import {describe, before, after, beforeEach, afterEach} from 'node:test';
  2 | beforeEach(() => {});
  3 | beforeEach(() => {});

`;

exports[`no-duplicate-hooks > invalid(4): import {describe, before, after, beforeEach, afterEach} from 'node:test';\nbeforeEach(() => {});\nbeforeEach(() => {}); 2`] = `

Message:
  1 | import {describe, before, after, beforeEach, afterEach} from 'node:test';
  2 | beforeEach(() => {});
> 3 | beforeEach(() => {});
    | ^^^^^^^^^^^^^^^^^^^^ Duplicate \`beforeEach\` hook in the same scope.

`;

exports[`no-duplicate-hooks > invalid(5): import {describe, before, after, beforeEach, afterEach} from 'node:test';\nbeforeEach(() => {});\nbeforeEach(() => {}, {timeout: 1}); 1`] = `

  1 | import {describe, before, after, beforeEach, afterEach} from 'node:test';
  2 | beforeEach(() => {});
  3 | beforeEach(() => {}, {timeout: 1});

`;

exports[`no-duplicate-hooks > invalid(5): import {describe, before, after, beforeEach, afterEach} from 'node:test';\nbeforeEach(() => {});\nbeforeEach(() => {}, {timeout: 1}); 2`] = `

Message:
  1 | import {describe, before, after, beforeEach, afterEach} from 'node:test';
  2 | beforeEach(() => {});
> 3 | beforeEach(() => {}, {timeout: 1});
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Duplicate \`beforeEach\` hook in the same scope.

`;

exports[`no-duplicate-hooks > invalid(6): import {describe, before, after, beforeEach, afterEach} from 'node:test';\nbefore(() => {});\nbefore(() => {}, {timeout: 1}); 1`] = `

  1 | import {describe, before, after, beforeEach, afterEach} from 'node:test';
  2 | before(() => {});
  3 | before(() => {}, {timeout: 1});

`;

exports[`no-duplicate-hooks > invalid(6): import {describe, before, after, beforeEach, afterEach} from 'node:test';\nbefore(() => {});\nbefore(() => {}, {timeout: 1}); 2`] = `

Message:
  1 | import {describe, before, after, beforeEach, afterEach} from 'node:test';
  2 | before(() => {});
> 3 | before(() => {}, {timeout: 1});
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Duplicate \`before\` hook in the same scope.

`;

exports[`no-duplicate-hooks > invalid(7): import {describe, before, after, beforeEach, afterEach} from 'node:test';\nafter(() => {});\nafter(() => {});\nafter(() => {}); 1`] = `

  1 | import {describe, before, after, beforeEach, afterEach} from 'node:test';
  2 | after(() => {});
  3 | after(() => {});
  4 | after(() => {});

`;

exports[`no-duplicate-hooks > invalid(7): import {describe, before, after, beforeEach, afterEach} from 'node:test';\nafter(() => {});\nafter(() => {});\nafter(() => {}); 2`] = `

Message:
  1 | import {describe, before, after, beforeEach, afterEach} from 'node:test';
  2 | after(() => {});
> 3 | after(() => {});
    | ^^^^^^^^^^^^^^^ Duplicate \`after\` hook in the same scope.
  4 | after(() => {});

`;

exports[`no-duplicate-hooks > invalid(7): import {describe, before, after, beforeEach, afterEach} from 'node:test';\nafter(() => {});\nafter(() => {});\nafter(() => {}); 3`] = `

Message:
  1 | import {describe, before, after, beforeEach, afterEach} from 'node:test';
  2 | after(() => {});
  3 | after(() => {});
> 4 | after(() => {});
    | ^^^^^^^^^^^^^^^ Duplicate \`after\` hook in the same scope.

`;

exports[`no-duplicate-hooks > invalid(8): import {describe, before, after, beforeEach, afterEach} from 'node:test';\ndescribe(\"a\", () => {\n\tbeforeEach(() => {});\n\tbeforeEach(() => {});\n}); 1`] = `

  1 | import {describe, before, after, beforeEach, afterEach} from 'node:test';
  2 | describe("a", () => {
  3 | 	beforeEach(() => {});
  4 | 	beforeEach(() => {});
  5 | });

`;

exports[`no-duplicate-hooks > invalid(8): import {describe, before, after, beforeEach, afterEach} from 'node:test';\ndescribe(\"a\", () => {\n\tbeforeEach(() => {});\n\tbeforeEach(() => {});\n}); 2`] = `

Message:
  1 | import {describe, before, after, beforeEach, afterEach} from 'node:test';
  2 | describe("a", () => {
  3 | 	beforeEach(() => {});
> 4 | 	beforeEach(() => {});
    | 	^^^^^^^^^^^^^^^^^^^^ Duplicate \`beforeEach\` hook in the same scope.
  5 | });

`;

exports[`no-duplicate-hooks > invalid(9): import {describe, before, after, beforeEach, afterEach} from 'node:test';\nbefore(() => {});\ndescribe(\"a\", () => {\n\tafter(() => {});\n\tafter(() => {});\n}); 1`] = `

  1 | import {describe, before, after, beforeEach, afterEach} from 'node:test';
  2 | before(() => {});
  3 | describe("a", () => {
  4 | 	after(() => {});
  5 | 	after(() => {});
  6 | });

`;

exports[`no-duplicate-hooks > invalid(9): import {describe, before, after, beforeEach, afterEach} from 'node:test';\nbefore(() => {});\ndescribe(\"a\", () => {\n\tafter(() => {});\n\tafter(() => {});\n}); 2`] = `

Message:
  1 | import {describe, before, after, beforeEach, afterEach} from 'node:test';
  2 | before(() => {});
  3 | describe("a", () => {
  4 | 	after(() => {});
> 5 | 	after(() => {});
    | 	^^^^^^^^^^^^^^^ Duplicate \`after\` hook in the same scope.
  6 | });

`;
